# ninjassets

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  dev.sh  docker-compose copy.yml  docker-compose-dev.yml  docker-compose.yml
.github/: dependabot.yml
aiagent/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  ruff.toml
aiagent/src/ai_service/: __init__.py  composition.py  config.py  logging.py  main.py
aiagent/src/ai_service/domain/: chunking.py  indexer.py  rag.py  sources.py
aiagent/src/ai_service/infrastructure/: deps.py  schemas.py
aiagent/src/ai_service/infrastructure/adapters/: anonymizer.py  embedder.py  llm.py  qdrant_store.py
aiagent/src/ai_service/infrastructure/routes/: health.py  knowledge.py  rag.py
aiagent/src/ai_service/jobs/: reindex.py
aiagent/tests/: conftest.py  test_anonymizer_stream.py  test_chunking.py  test_sources.py
aiagent/tests/e2e/: test_health.py  test_rag.py
aiagent/tests/fakes/: fake_llm.py  fake_store.py
assets/: ninjasset.psd  ninjasset_.psd
backend/: .env.example  .prettierrc  Dockerfile  README.md  entrypoint.sh  eslint.config.mjs  knexfile.cjs  knexfile.test.cjs  knexfile.ts  package-lock.json  package.json  tsconfig.eslint.json  tsconfig.json
docs/: e2e-testing.md  openapi.json  spec-admin-user-management.md  spec-ai-assistant.md  spec-api-automation.md  spec-app-branding.md  spec-asset-categories.md  spec-asset-management.md  spec-asset-media-qr.md  spec-authentication.md  spec-bulk-assign.md  spec-custody-receipt.md  spec-email-notifications.md  (+16 more)
(+574 files in other folders)
