[project]
name = "ninjasset-aiagent"
version = "0.1.0"
description = "ninjasset admin AI assistant — RAG service (SPEC-AI-ASSISTANT-001)."
readme = "README.md"
requires-python = ">=3.12,<3.14"

dependencies = [
  # Web
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",

  # RAG / embeddings (local multilingual-e5 model)
  "langchain-core>=0.3",
  "langchain-huggingface>=0.1",
  "sentence-transformers>=3.0",
  "langchain-text-splitters>=0.3",

  # Vector store
  "langchain-qdrant>=0.2",
  "qdrant-client>=1.12",

  # LLM provider (Grok / xAI)
  "langchain-xai>=0.2",

  # PII anonymization
  "presidio-analyzer>=2.2",
  "presidio-anonymizer>=2.2",
  "spacy>=3.8",

  # Misc
  "httpx>=0.27",
]

[project.optional-dependencies]
# Tracing is OPTIONAL and OFF by default (D16). Only pulled in if you want it.
tracing = ["langfuse>=2.0"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
markers = [
  "integration: tests that need a real Qdrant / model (skipped in unit CI)",
]
